# ga-e-of-life

./: .gitignore  Cargo.toml  README.md  game_of_life-2b18aaa1677dd193.js  game_of_life-2b18aaa1677dd193_bg.wasm  index.html  manifest.json  sw.js
.github/workflows/: rust.yml
assets/: js_binding.js  manifest.json
assets/shader/: font.wgsl  gradation.wgsl  texture.wgsl
game/: main.rs
src/: application.rs  builder.rs  components.rs  configs.rs  entity_builder.rs  game_state.rs  js_binding.rs  lib.rs
src/renderer/: font_manager.rs  gpu_resource_manager.rs  mesh.rs  mesh_factory.rs  mod.rs  objects.rs  pipeline_manager.rs  render_context.rs  render_context_builder.rs  render_state.rs  texture.rs  vertex.rs
src/resources/: camera.rs  input_handler.rs  mod.rs  stage_tick.rs
src/system/: mod.rs  reset_input.rs  update_camera.rs  update_cells.rs
src/system/dispatcher/: mod.rs  multi_thread.rs  single_thread.rs
