[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Lavumi <lavumi@gmail.com>"]
edition = "2021"
description = "conway's game of life"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
license = ""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasm-wgpu"
path = "game/main.rs"



[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[dependencies]
cfg-if = "1"
anyhow = "1.0"
winit = "0.30.4"
env_logger = "0.11.3"
log = "0.4"
wgpu = "22.0.0"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = ["derive"] }
specs-derive = "0.4.1"
cgmath = "0.18"
instant = "0.1"
rand = "0.8.5"
fontdue = "0.9.2"
futures-intrusive = "0.5.0"
bitflags = "2.6.0"
wasm-bindgen-futures = "0.4.42"
lazy_static = "1.5.0"
wasm-bindgen = "0.2.92"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "22.0.0", features = ["webgl"]}
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
getrandom = { version = "0.2", features = ["js"] }




[dependencies.specs]
version = "0.20.0"
default-features = false

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
